ontopia/src/test-data/ltm/error/namescope.ltm
[bongo = "Bongo"]
[ugga  = / bongo "ugga"]